Fixed z-index

--- a/mayhem.css
+++ b/mayhem.css
@@ -36,7 +36,7 @@
 	background: black;
 	width: 800px;
 	height: 22px;
-	z-index: 2;
+	z-index: 3;
 	height: 23px;
 }
 
